# libmininsf

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: write_source.c
examples/cpp/: write_source.cpp
examples/csharp/: Program.cs
include/mininsf/: mininsf.h
src/: mininsf.c
tests/: test_mininsf.c
